# archive

./: Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/: router.py
app/common/db/: database.py  session.py
app/common/llm/: decorators.py  langchain_client.py  langfuse_helper.py
app/common/monitoring/: decorators.py  metrics.py  metrics_collector.py  prometheus.yml
app/core/: auth.py  config.py  default_router.py  di_container.py
app/exception_handlers/: curriculum_exception_handler.py  taxonomy_exception_handler.py
app/lifespan/: __init__.py  core.py  monitoring.py  redis.py
app/tasks/: feed_tasks.py
backend/: mypy.ini  redis.conf
backend/alembic/versions/: 2025_08_07_0624-dbee70730d60_initial.py  2025_08_07_1536-58db06d7bdf3_follow.py  2025_08_07_1616-5cd3522f2d40_migration_summary_userid.py  2025_08_10_0956-df3139545345_week_title.py  2025_08_11_0339-00e9aef3b1f5_add_social_tables_likes_comments_.py
backend/app/: main.py
backend/app/core/: di_container.py
backend/app/exception_handlers/: __init__.py  default_exception_handler.py  feed_exception_handler.py  learning_exception_handelr.py  social_exception_handler.py  user_exception_handler.py
backend/app/lifespan/: __init__.py
backend/app/utils/: crypto.py
backend/tests/: conftest.py
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
script/: backup-redis.sh  env-check.sh  redis-cli.sh  redis-flush.sh  redis-info.sh  redis-monitor.sh  startup.sh
tests/: conftest.py
(+233 files in other folders)
